# SteamIconFix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  SteamIconFix.cpp  main.cpp
include/: lnkReader.h
lib/: libcurl_a.lib
src/: main.cpp  steamIconFix.cpp  steamIconFix.h  tools.cpp  tools.h
src/code/: steamIconFix.cpp
src/header/: steamIconFix.h
